2002-12-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/tex.scm (tex-output-expression): remove eval compat
	glut. Other output files too.

	* scm/chord-name.scm: don't export anything from chord module.

	* input/test/american-chords.ly: idem

	* input/test/banter-chords.ly (texidoc): idem

	* input/test/Cc-chords.ly: add breakage notes.

	* Documentation/user/refman.itely (Text markup): rewrite manual section.

	* lily/parser.yy (scalar): allow \markup { } as property value. 

	* scm/chord-name.scm: complete new markup usage

	* scm/grob-description.scm (all-grob-descriptions): use new markup
	texts by default

2002-12-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/chord-name.scm: partial move to new markup texts.

2002-12-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/grob-description.scm (all-grob-descriptions): small bass figures.

	* scm/bass-figure.scm (brew-bass-figure): make stack direction
	settable.

2002-12-18  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el (LilyPond-command): propose 2midi if midi is
	invoked for old midi, wait for killing.

2002-12-16  Heikki Junes <hjunes@cc.hut.fi>

	* Documentation/user/music-glossary.tely: Finnishing.

2002-12-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/feta-nummer-code.mf: some kerning pairs.

2002-12-14  Rune Zedeler  <rz@localhost.localdomain>

	* scm/output-lib.scm (set-bar-number-visibility): Context-function
	Added.

	* Documentation/user/refman.itely (Bar numbers):
	set-bar-number-visibility added, modulo-bar-number removed again
	(sorry).

2002-12-14  Heikki Junes <hjunes@cc.hut.fi>

	* scm/output-lib.scm (modulo-bar-number-visible): add function.

	* Documentation/user/refman.itely: add modulo-bar-number-visible.

	* Documentation/user/music-glossary.tely: translate into Finnish.

2002-12-10  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: add shortcut for 2midi

	* lilypond-font-lock.el: fontify lyrics

2002-12-10  Rune Zedeler  <rz@daimi.au.dk>

	* scm/drums.scm : use 1.7.x names.
