@@ -135,11 +135,12 @@ class Slur:
 		e= self.end_chord
 
 		if e and s:
-			s.note_suffix = s.note_suffix + '('
-			e.note_prefix = ')' + e.note_prefix
+			s.note_suffix = s.note_suffix + '-('
+			e.note_prefix = e.note_suffix + '-)' 
 		else:
 			sys.stderr.write ("\nOrphaned slur")
-			
+
+
 class Voice:
 	def __init__ (self):
 		self.entries = []
@@ -337,18 +338,18 @@ class Chord:
 		for p in self.pitches:
 			if str:
 				str = str + ' ' 
-			str = str + pitch_to_lily_string (p) + sd
+			str = str + pitch_to_lily_string (p) 
 
+		if len (self.pitches) > 1:
+			str = '<<%s>>' % str
+		elif len (self.pitches) == 0:
+			str = 'r'
+
+		str = str + sd
 		for s in self.scripts:
 			str = str + '-' + s
 
-		str = self.note_prefix +str  + self.note_suffix
-		
-		if len (self.pitches) > 1:
-			str = '<%s>' % str
-		elif len (self.pitches) == 0:
-			str = 'r' + sd
-
+		str = self.note_prefix + str + self.note_suffix
 		str = self.chord_prefix + str + self.chord_suffix
 		
 		return str
